11-01-11 Holger Vogt
 * postcoms.c: dynamic memory allocation for buf and buf2 in fcn com_print()

11-01-08 Holger Vogt
 * com_cdump.c: add #include "ngspice.h" to allow use of command 'cdump'
   also under Windows 

11-01-06 Holger Vogt
 * inpcom.c: allow models like 2N2904 or 2SK136 also in subcircuits
 * examples/Monte_Carlo/mc_ring.sp: reduce memory consumption by adding
   'save' command, add jitter measurement

11-01-03 Holger Vogt
 * spiceif.c: add error checking for 'altermod'

11-01-02 Dietmar Warning
 * math/fft/fftlib.c: inline functions to static
 * ngspice.h: __inline for _MSC_VER

11-01-02 Holger Vogt   
 * spiceif.c: recall yesterday's change due to errors, if reset was given before
   install again, but only for CKTtime > 0

11-01-01 Holger Vogt   
 * breakp.c: update to multiple conditionals with '=' in stop command
   dctran.c: set breakpoint upon startup from database dbs ('stop when time = xxx' command)
   spiceif.c: additional call to CKTtemp(ckt) after 'altermod' command to set
   device instance pParam for immediate use

10-12-31 Holger Vogt   
 * breakp.c: allow multiple conditionals with '=' in stop command

10-12-30 Holger Vogt
 * aspice.c, inpcom.c, numparam/general.h, 1-f-code.h, equality.c
   randnumb.c, spdefs.h, cktsens.c: remove compiler warnings
   breakp.c: allow 'time = nnn' in stop command
   
2010-12-28 Holger Vogt
 * xpressn.c, cmath2.c, cmath2.h, randnumb.c, parse.c,
   examples/Monte_Carlo/MonteCarlo.sp:
    add poisson and exponential distribution to nutmeg parser,
    add gauss, aunif, unif, limit to numparam parser
 * spiceif.c: remove bug in experimental_code	
 * control.c: no i/o redirection in define command 
   (so > or < may be used safely)

2010-12-27  Robert Larice
 * tests/bsim3soi/inv_dc.cir ,
 * tests/bsim3soi/inv_tr.cir ,
 * tests/bsim3soi/test1.cir ,
 * tests/bsim3soi/test2.cir ,
 * tests/bsim3soi/test3.cir ,
 * tests/bsim3soi/test4.cir ,
 * tests/bsim3soi/test5.cir ,
 * tests/bsim3soi/test6.cir ,