@@ -1,3 +1,6 @@
+11-01-12 Dietmar Warning
+ * devices/adms/admst/ngspiceMODULEdefs.h.xml: allow gmin stepping by using ckt->CKTdiagGmin
+
 11-01-11 Holger Vogt
  * postcoms.c: dynamic memory allocation for buf and buf2 in fcn com_print()
 
